<resources>
    <string name="app_name">Project 1</string>
    <string name="header">Will You Play With Us ?</string>
    <string name="club_name">Student\'s Day Centre</string>
    <string name="contact">Contact us at sdc@school.com</string>
    <string name="location_time">Meet us in dormitory VD in Zilina every workday from 18:00 to 20:00. </string>
    <string name="cd_club_image">Playboard image representing activities of Student\'s Day Centre</string>
</resources>
